--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ target/
 # Refactoring backup directories
 .refactor-backup-*/
 *.refactor-backup-*
+
+# Additional Maven patterns added Fri Aug 29 20:29:57 CEST 2025
+**/target/generated-sources/
+**/target/generated-test-sources/
+**/target/generated-resources/
+.refactor-backup-*/
